--- a/movie-details.html
+++ b/movie-details.html
@@ -39,7 +39,7 @@
         <a class="btn" href="index.html">Back To Movies</a>
       </div>
       <!-- Movie Details Output -->
-      <div class="movie-details">
+      <div id="movie-details">
         
       </div>
     </section>
