--- a/src/shows.html
+++ b/src/shows.html
@@ -13,8 +13,7 @@
     <link rel="stylesheet" href="lib/fontawesome.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/spinner.css" />
-    <script src="js/script.js" defer></script>
-    <title>Flixx | Movie Details</title>
+    <title>Flixx</title>
   </head>
   <body>
     <header class="main-header">
@@ -33,14 +32,10 @@
       </div>
     </header>
 
-    <!-- Movie Details -->
+    <!-- Popular TV Shows -->
     <section class="container">
-      <div class="back">
-        <a class="btn" href="index.html">Back To Movies</a>
-      </div>
-      <!-- Movie Details Output -->
-      <div id="movie-details">
-        
+      <h2>Popular TV Shows</h2>
+      <div id="popular-shows" class="grid">
       </div>
     </section>
 
